# IPC_Test

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Common.cpp  ComponentA.cpp  ComponentB.cpp  EntriesProcessing.cpp
src/include/: Settings.h
src/include/Common/: Common.h
src/include/EntriesProcessing/: EntriesProcessing.h
tests/: CMakeLists.txt  tests.cpp
